# post-genesis4

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyqt5post_genesis4.pyw  requirements.txt  setup.py
post_genesis4/: __init__.py  __main__.py  cli.py
post_genesis4/gui/: __init__.py  core_pannel.py  main_window.py  metadata_window.py
post_genesis4/gui/widgets/: __init__.py  brief_lattice_plot.py  fft_spectrum.py  gif_exporter.py  main_plot_unit.py  navigation_toolbar.py  slice_control.py  waiting_dialog.py
post_genesis4/utils/: __init__.py  file_reader.py  genesis2_utils.py  log_utils.py  math_utils.py
